# secure-chain

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: starting_nodes.json
data/.history/: shell.txt
src/: block.rs  blockchain.rs  bootstrap.rs  clargs.rs  cli.rs  errors.rs  keys.rs  logging.rs  main.rs  networking.rs  p2p.rs  peers.rs  types.rs  utils.rs
src/protocol/: header.rs  header_ext.rs  mod.rs  proof_of_work.rs
