[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
rand = "0.8"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_enum = "0.7"
bincode = { version = "2", features = ["serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
colored = "3.0"
lazy_static = "1.5"
rustyline = "17.0"
